--- a/app/index.html
+++ b/app/index.html
@@ -293,13 +293,13 @@
                         src="images/sponsors/oracle.png" alt="Oracle"/></a>
             </div>
             <div class="col5" align="center">
-                <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
+                <a href="http://www.wildfly.org" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
             </div>
             <div class="col5" align="center">
-                <a href="https://developers.google.com/" target="_blank"><img src="images/sponsors/google.png" alt="Google"/></a>
+                <a href="https://developers.google.com" target="_blank"><img src="images/sponsors/google.png" alt="Google"/></a>
             </div>
             <div class="col5" align="center">
-                <a href="http://www.jetbrains.com/" target="_blank"><img src="images/sponsors/jetbrains.png" alt="JetBrains"/></a>
+                <a href="http://www.jetbrains.com" target="_blank"><img src="images/sponsors/jetbrains.png" alt="JetBrains"/></a>
             </div>
         </div>
         <div class="row">
@@ -318,10 +318,10 @@
         </div>
         <div class="row">
             <div class="col5" align="center">
-                <a href="http://www.aca-it.be/" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
+                <a href="http://www.aca-it.be" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
             </div>
             <div class="col5" align="center">
-                <a href="http://www.hazelcast.com/" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
+                <a href="http://www.hazelcast.com" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
             </div>
             <div class="col5" align="center">
                 <a href="http://www.kiffer.be" target="_blank"><img src="images/sponsors/kiffer.png" alt="Kiffer"/></a>
@@ -332,12 +332,13 @@
         </div>
         <div class="row">
             <div class="col5" align="center">
-                <a href="http://www.typesafe.com/" target="_blank"><img src="images/sponsors/typesafe.png" alt="Typesafe"/></a>
+                <a href="http://www.typesafe.com" target="_blank"><img src="images/sponsors/typesafe.png" alt="Typesafe"/></a>
             </div>
             <div class="col5" align="center">
-                <a href="http://www.parleys.com/" target="_blank"><img src="images/sponsors/parleys.png" alt="Parleys"/></a>
+                <a href="http://www.parleys.com" target="_blank"><img src="images/sponsors/parleys.png" alt="Parleys"/></a>
             </div>
             <div class="col5" align="center">
+                <a href="http://zeroturnaround.com" target="_blank"><img src="images/sponsors/zeroturnaround.png" alt="ZeroTurnaround"/></a>
             </div>
             <div class="col5" align="center">
             </div>
