Added extra hotel + corrected sponsor link

--- a/app/index.html
+++ b/app/index.html
@@ -327,7 +327,7 @@
                 <a href="http://www.kiffer.be" target="_blank"><img src="images/sponsors/kiffer.png" alt="Kiffer"/></a>
             </div>
             <div class="col5" align="center">
-                <a  href="http://www.triology.de" target="_blank"><img src="images/sponsors/triology.png" alt="Triology"/></a>
+                <a  href="http://www.scm-manager.com" target="_blank"><img src="images/sponsors/triology.png" alt="Triology"/></a>
             </div>
         </div>
         <div class="row">
