- Added Thank You page for registration - Added "Buy Tickets"

--- a/app/index.html
+++ b/app/index.html
@@ -125,9 +125,9 @@
                             <li><a href="#/contact">Contact</a></li>
                         </ul>
                     </li>
-                    <!--<li class="btn hide_mobile">-->
-                    <!--<a href="#">Buy tickets</a>-->
-                    <!--</li>-->
+                    <li class="btn hide_mobile">
+                    <a href="https://regbe.devoxx.com/public#DV13">Buy tickets</a>
+                    </li>
                     <li class="btn popup login btn_grey" ng-hide="model.currentUser()" ng-class="{'open':model.loginRequested}">
                         <a>Login</a>
                         
