--- a/app/index.html
+++ b/app/index.html
@@ -341,6 +341,7 @@
                 <a href="http://zeroturnaround.com" target="_blank"><img src="images/sponsors/zeroturnaround.png" alt="ZeroTurnaround"/></a>
             </div>
             <div class="col5" align="center">
+                <a href="http://www.atalasoft.com/" target="_blank"><img src="images/sponsors/atalasoft.png" alt="Atalasoft"/></a>
             </div>
         </div>
     </div>
