--- a/app/thankyou.html
+++ b/app/thankyou.html
@@ -350,10 +350,10 @@
                 <a href="http://www.hazelcast.com" target="_blank"><img src="images/sponsors/hazelcast.png" alt="Hazelcast"/></a>
             </div>
             <div class="col5" align="center">
-                <a href="http://www.kiffer.be" target="_blank"><img src="images/sponsors/kiffer.png" alt="Kiffer"/></a>
+                <a  href="http://www.scm-manager.com" target="_blank"><img src="images/sponsors/triology.png" alt="Triology"/></a>
             </div>
             <div class="col5" align="center">
-                <a  href="http://www.scm-manager.com" target="_blank"><img src="images/sponsors/triology.png" alt="Triology"/></a>
+                <a href="http://www.eclipse.org/org/foundation/" target="_blank"><img src="images/sponsors/eclipse.png" alt="Eclipse"/></a>
             </div>
         </div>
         <div class="row">
@@ -367,7 +367,7 @@
                 <a href="http://zeroturnaround.com" target="_blank"><img src="images/sponsors/zeroturnaround.png" alt="ZeroTurnaround"/></a>
             </div>
             <div class="col5" align="center">
-                <a href="http://www.eclipse.org/org/foundation/" target="_blank"><img src="images/sponsors/eclipse.png" alt="Eclipse"/></a>
+                <a href="http://www.atalasoft.com/" target="_blank"><img src="images/sponsors/atalasoft.png" alt="Atalasoft"/></a>
             </div>
         </div>
     </div>
