Added speakers (with isotype support)

--- a/app/index.html
+++ b/app/index.html
@@ -109,13 +109,13 @@
             <nav class="" ng-controller="LoginCtrl" ng-cloak="ng-cloak">
                 <ul>
                     <li><a href="#/">Home</a></li>
-                    <!--<li class="submenu subleft">-->
-                    <!--<a href="#">Program TBA</a>-->
-                    <!--<ul>-->
-                    <!--<li><a href="#">Schedule</a></li>-->
-                    <!--<li><a href="#">Speakers</a></li>-->
-                    <!--</ul>-->
-                    <!--</li>-->
+                    <li class="submenu subleft">
+                        <a href="#">Program</a>
+                        <ul>
+                            <li><a href="#/schedule">Schedule</a></li>
+                            <li><a href="#/devoxxians">Devoxxians</a></li>
+                        </ul>
+                    </li>
                     <li class="submenu subright">
                         <a>Practical</a>
                         <ul>
