--- a/example_html/index.html
+++ b/example_html/index.html
@@ -84,10 +84,14 @@
 							
 							<div class="popup">
 								<ul>
-									<li><a href="#">Dublin</a></li>
-									<li><a href="#">Belgium</a></li>
-									<li><a href="#">United Kingdom</a></li>
-									<li><a href="#">France</a></li>
+									<li><a href="#">Copenhagen 26/5 2013</a></li>
+									<li><a href="#">Amsterdam 8/6 2013</a></li>
+									<li><a href="#">Strasbourg 21/6 2013</a></li>
+									<li><a href="#">Ghent 5/10 2013</a></li>
+									<li><a href="#">Brussels 12/10 2013</a></li>
+									<li><a href="#">Toronto 19/10 2013</a></li>
+									<li><a href="#">Den Haag 26/10 2013</a></li>
+									<li><a href="#">Paris TBA</a></li>							
 								</ul>
 							</div>
 						</div>
@@ -130,7 +134,7 @@
 		</div>
 		
 		
-		
+		<!--
 		<div id="disclaimer" class="area black">
 			<div class="grid">
 			
@@ -149,6 +153,7 @@
 				
 			</div>
 		</div>
+		-->
 		
 		
 		
