--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -34,7 +34,7 @@
     <!-- endbuild -->
     <!--[endif]-->
 
-    <!-- build:js scripts/scripts.js -->
+    <!-- build:js scripts/scriptsstatic.js -->
     <script src="components/jquery/jquery.js"></script>
     <script src="components/modernizr/modernizr.js"></script>
     <script src="components/bxslider-4/jquery.bxslider.js"></script>
@@ -56,7 +56,7 @@
 
     </script>
 </head>
-<body ng-app="cfpSpeakerApp">
+<body >
 <!--[if lt IE 7]>
 <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to
@@ -70,7 +70,7 @@
                 <a href="#"><img src="images/devoxx_logo.gif"></a>
             </div>
 
-            <nav class="" ng-controller="LoginCtrl" ng-cloak="ng-cloak">
+            <nav class="">
                 <ul>
                     <li><a href="#/">Home</a></li>
                     <li class="submenu subleft">
