--- a/app/speakersBody.hbr.html
+++ b/app/speakersBody.hbr.html
@@ -90,7 +90,7 @@
                         <h4>{{firstName}} {{lastName}}</h4>
                         <div class="popup">
                             <h4>{{firstName}} {{lastName}}</h4>
-                            <p>{{bio}}</p>         
+                            <p>{{company}}</p>         
                             <a href="{{page}}" class="btn">View my talks</a>
                         </div>
                     </li>
