--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
     <!-- endbuild -->
     <!--[endif]-->
 
-    <script src="/config.js"></script>
+    <script src="config.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="components/jquery/jquery.js"></script>
