--- a/app/speakersBody.hbr.html
+++ b/app/speakersBody.hbr.html
@@ -1,3 +1,5 @@
+<div class="speakers">
+
 <div id="topinfo" class="area orange">
     <div class="grid">
     
@@ -24,7 +26,7 @@
                         <li>
                             <a href="#" data-filter=".track-{{id}}">
                                 <span class="checker"></span>
-                                <span class="icon"><img src="images/tracks/{{icon}}" alt="" /></span>
+                                <span class="icon"><div class="{{icon}}"></div></span>
                                 <span class="name">{{name}}</span>
                             </a>
                         </li>
@@ -103,6 +105,8 @@
         </div>
         
     </div>
+</div>
+
 </div>
 
 <script>
