--- a/app/index.html
+++ b/app/index.html
@@ -112,8 +112,8 @@
                     <li class="submenu subleft">
                         <a href="#">Program</a>
                         <ul>
-                            <li><a href="#/schedule">Schedule</a></li>
-                            <li><a href="#/devoxxians">Devoxxians</a></li>
+                            <li><a href="/dv12-schedule.html">Schedule</a></li>
+                            <li><a href="/dv12-speakers.html">Devoxxians</a></li>
                         </ul>
                     </li>
                     <li class="submenu subright">
