Track details popup in detail page

--- a/app/speakerRow.hbr.html
+++ b/app/speakerRow.hbr.html
@@ -3,7 +3,7 @@
                 <div class="col10">
                     
                     <div class="icon">
-                        <div class="{{presentation.trackIcon}}"></div>
+                        <div class="{{presentation.trackIcon}}" title="{{presentation.track}}"></div>
                     </div>
                     {{#if speaker}}
                         <a href="{{speaker.page}}?presId={{presentation.id}}">
