Add speaker tweethandle

--- a/app/speakerBody.hbr.html
+++ b/app/speakerBody.hbr.html
@@ -85,6 +85,7 @@
                     </div>      
                     
                     <h4>{{firstName}} {{lastName}}</h4>
+                    <h5><a href="http://twitter.com/{{tweethandle}}">{{tweethandle}}</a></h5>
                     <p>{{nlbr bio}}</p>
 
                     {{/with}}
