--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -73,13 +73,14 @@
             <nav class="">
                 <ul>
                     <li><a href="/#/">Home</a></li>
-                    <li class="submenu subleft">
+                    <li><a href="/dv13-speakers.html">Devoxxians</a></li>
+                    <!-- <li class="submenu subleft">
                         <a href="#">Program</a>
                         <ul>
                             <li><a href="/dv13-schedule.html">Schedule</a></li>
                             <li><a href="/dv13-speakers.html">Devoxxians</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li class="submenu subright">
                         <a>Practical</a>
                         <ul>
@@ -192,8 +193,8 @@
                     <li><a href="#venue">Venue</a></li>
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#sponsors">Sponsorships</a></li>
-                    <li><a href="#">Schedule TBA</a></li>
-                    <li><a href="#">Speakers TBA</a></li>
+                    <li><a href="/dv13-schedule.html">Schedule</a></li>
+                    <li><a href="/dv13-speakers.html">Speakers</a></li>
                 </ul>
             </div>
 
