Added news item

--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -286,6 +286,17 @@
                 <a href="http://www.atalasoft.com/" target="_blank"><img src="images/sponsors/atalasoft.png" alt="Atalasoft"/></a>
             </div>
         </div>
+        <div class="row">
+            <div class="col5" align="center">
+                <a href="http://xplore.be/" target="_blank"><img src="images/sponsors/xplore.png" alt="XPLORE"/></a>
+            </div>
+            <div class="col5" align="center">
+            </div>
+            <div class="col5" align="center">
+            </div>
+            <div class="col5" align="center">
+            </div>
+        </div>
     </div>
 </div>
 
