- Replaced news images with JPGs - Added keynote speakers news item

--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -5,7 +5,7 @@
 			<div class="col9">
 				
 				<h1>Schedule {{eventDetails.name}}</h1>
-				<p>The bleeding-edge content that we've lined-up for you!</p>
+				<p>We'll release the Devoxx schedule mid-September.</p>
 				
 			</div>	
 			<div class="col10 push1">
