--- a/app/speakerBody.hbr.html
+++ b/app/speakerBody.hbr.html
@@ -64,7 +64,7 @@
 
             <div class="col11 talk-{{id}}" style="display:none;">                            
 
-                <!--<h1>{{title}}</h1>-->
+                <h1>{{title}}</h1>
             
                 <p>{{nlbr summary}}</p>   
                 
