Link back to speakers page

--- a/app/speakerBody.hbr.html
+++ b/app/speakerBody.hbr.html
@@ -30,7 +30,7 @@
                 <ul class="dotList" style="padding-top: 100px;">
 
                 <li>
-
+                <a href="/{{../event.key}}-speakers.html#{{trackIdVar}}">
                 <div class="icon">
                     <div class="{{trackIcon}}"></div>
                 </div>
@@ -41,7 +41,7 @@
                     {{{trackDescription}}}
                     <span class="textballoon"></span>
                 </div>                
-
+                </a>
                 </li>
 
                 </ul>
