Corrected hyper links to Sponsors page etc.

--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -187,12 +187,12 @@
             <div class="col5">
                 <h4>Site map</h4>
                 <ul>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
-                    <li><a href="#about">About CFP</a></li>
-                    <li><a href="#venue">Venue</a></li>
-                    <li><a href="#faq">FAQ</a></li>
-                    <li><a href="#sponsors">Sponsorships</a></li>
+                    <li><a href="/#/team">Team</a></li>
+                    <li><a href="/#/contact">Contact Us</a></li>
+                    <li><a href="/#/about">About CFP</a></li>
+                    <li><a href="/#/venue">Venue</a></li>
+                    <li><a href="/#/faq">FAQ</a></li>
+                    <li><a href="/#/sponsors">Sponsorships</a></li>
                     <li><a href="/dv13-schedule.html">Schedule</a></li>
                     <li><a href="/dv13-speakers.html">Speakers</a></li>
                 </ul>
