--- a/app/index.html
+++ b/app/index.html
@@ -246,12 +246,12 @@
             <div class="col5">
                 <h4>Site map</h4>
                 <ul>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
-                    <li><a href="#about">About CFP</a></li>
-                    <li><a href="#venue">Venue</a></li>
-                    <li><a href="#faq">FAQ</a></li>
-                    <li><a href="#sponsors">Sponsorships</a></li>
+                    <li><a href="/#/team">Team</a></li>
+                    <li><a href="/#/contact">Contact Us</a></li>
+                    <li><a href="/#/about">About CFP</a></li>
+                    <li><a href="/#/venue">Venue</a></li>
+                    <li><a href="/#/faq">FAQ</a></li>
+                    <li><a href="/#/sponsors">Sponsorships</a></li>
                     <li><a href="/dv13-schedule.html">Schedule</a></li>
                     <li><a href="/dv13-speakers.html">Speakers</a></li>
                 </ul>
@@ -363,7 +363,7 @@
     <div class="grid">
         <div class="row">
             <div class="col11">
-                <a href="agreement.html">Waiver of liability and indemnity agreement</a>
+                <a href="/agreement.html">Waiver of liability and indemnity agreement</a>
             </div>
             <div class="col9">
                 design by <a href="http://www.three-sixty.be" target="_blank">Three-Sixty Media</a>
