--- a/app/index.html
+++ b/app/index.html
@@ -350,6 +350,7 @@
                 <a href="http://xplore.be/" target="_blank"><img src="images/sponsors/xplore.png" alt="XPLORE"/></a>
             </div>
             <div class="col5" align="center">
+                <a href="http://www.pluralsight.com/training" target="_blank"><img src="images/sponsors/pluralsight.jpg" alt="pluralsight"/></a>
             </div>
             <div class="col5" align="center">
             </div>
